# course.pde-exam-2025

./: 404.html  CMakeLists.txt  Examen.ipynb  README.adoc  README.md  index.html  package-lock.json  package.json  pyproject.toml  site.yml  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
course.pde-exam-2025/: index.html  overview.html  quickstart.html
course.pde-exam-2025/env/: antora.html  cmake.html  githubactions.html  jupyter.html  rename.html  vscode.html
course.pde-exam-2025/examples/: fin.html  index.html
docs/: antora.yml
docs/modules/ROOT/pages/: index.adoc
feelpp-project/: overview.html  quickstart.html
feelpp-project/env/: antora.html  cmake.html  githubactions.html  jupyter.html  rename.html  vscode.html
feelpp-project/examples/: fin.html
src/: CMakeLists.txt  basis.cpp  basis.hpp  error.cpp  error.hpp  fem.hpp  functionspace.cpp  functionspace.hpp  geomap.cpp  geomap.hpp  mesh.cpp  mesh.hpp  quadrature.hpp  tests.cpp
src/boost/: ut.hpp
src/data/: square.geo  square.msh  triangle2.geo  triangle2.msh
